--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
   }
 
   body {
-    @apply bg-white text-base font-medium font-sans text-gray md:text-base-tablet;
+    @apply bg-white font-sans text-base font-medium text-gray md:text-base-tablet;
   }
   h1 {
     @apply text-h1 font-bold md:text-h1-tablet lg:text-h1-desktop;
@@ -53,7 +53,7 @@
     @apply flex h-12 w-12 items-center justify-center bg-black text-white md:h-16 md:w-16;
   }
   .btn {
-    @apply rounded-full px-x-mobile py-y-mobile md:px-x md:py-y;
+    @apply rounded-full px-x py-y md:px-x-md md:py-y-md;
   }
   .btn-primary {
     @apply btn bg-black hover:bg-indigo;
