--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
   }
 
   body {
-    @apply bg-white font-sans text-base font-medium text-gray md:text-base-tablet;
+    @apply bg-white font-sans text-base font-medium text-white md:text-base-tablet;
   }
   h1 {
     @apply text-h1 font-bold md:text-h1-tablet lg:text-h1-desktop;
@@ -63,12 +63,5 @@
   }
   .btn-arrow {
     @apply flex h-16 w-16 text-black hover:text-indigo;
-  }
-  .carousel-item {
-    @apply box-content flex flex-none;
-    scroll-snap-align: start;
-  }
-  .carousel-center .carousel-item {
-    scroll-snap-align: center;
   }
 }
